# job-tracker-cli

./: .gitignore  README.md  pyproject.toml
jobtrackercli/: main.py
jobtrackercli/commands/: __init__.py  add_job.py  delete_job.py  generate_sankey_graph.py  update_job.py  view_jobs.py
jobtrackercli/db/: initialize_db.py
jobtrackercli/ui/: banner.py  menu.py  utils.py
